# appsignal-wrap

./: CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  install.sh  mono.yml  rust-toolchain.toml
.changesets/: add----revision--cli-argument.md  add----version--command-line-option-.md  add-command-as-error-tag-and-log-attribute.md  add-installation-script-.md  add-required-name-argument.md  fix-exit-with-parent-on-macos.md  initial-release.md  release-macos-builds.md  rename-the-application-to--appsignal-wrap-.md  rename-to--appsignal-run-.md  report-exit-failures-as-errors-to-appsignal.md  restore-default-sigpipe-behaviour.md
.github/workflows/: build_release.yaml  ci.yaml  create_release_from_tag.yml  publish_release.yaml
script/: build_artifact  build_artifacts  read_version  write_version
src/: channel.rs  check_in.rs  cli.rs  client.rs  error.rs  exit.rs  hostname.rs  log.rs  main.rs  ndjson.rs  signal.rs  signals.rs  timestamp.rs
