[package]
name = "appsignal-run"
version = "0.2.2"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive", "env", "string"] }
rand = "0.8.5"
hex = "0.4.3"
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_warn"] }
nix = { version = "0.29.0", features = ["hostname", "signal"] }
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tokio-stream = { version = "0.1.6", features = ["signal"] }
libc = "0.2.161"
